syntax = "proto3";

option go_package = "./;auth";

package auth;

message AuthData {
  string username = 1;
  string password = 2;
}

message Token {
  string token = 1;
}

message User {
  uint64 ID = 1;
  string username = 2;
}

message IsDeleted {
  bool isDeleted = 1;
}

message Session {
  string ID = 1;
  User user = 2;
}

service AuthMaker {
  rpc Login (AuthData) returns (User);
  rpc Register (AuthData) returns (User);
  rpc CreateSession (User) returns (Token);
  rpc GetSession (Token) returns (Session);
  rpc DeleteSession (Token) returns (IsDeleted);
}
